Bug 118127 - can't burn iso image from media:/... it says I can only select
Summary: can't burn iso image from media:/... it says I can only select
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-11 18:57 UTC by Francois Marier
Modified: 2005-12-12 10:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francois Marier 2005-12-11 18:57:48 UTC
Version:           0.12.8 (using KDE KDE 3.4.2)
Installed from:    Debian testing/unstable Packages

Sebastià <annonygmouse@yahoo.co.uk> reported the following issue on the Debian bug tracker (http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=342648):

When trying to burn an ISO image on the file dialog I access the file
using media:/ protocol. When I click on "OK" a popup dialog appears
saying that I can only select local files and does not allow the ISO to
be burnt.
Comment 1 Sebastian Trueg 2005-12-12 10:15:07 UTC
SVN commit 487840 by trueg:

Support for media:// urls in the image writing dialogs.

BUG: 118127


 M  +2 -0      ChangeLog  
 M  +1 -1      src/misc/k3bcdimagewritingdialog.cpp  
 M  +1 -1      src/misc/k3bisoimagewritingdialog.cpp  


--- branches/stable/extragear/multimedia/k3b/ChangeLog #487839:487840
@@ -13,6 +13,8 @@
  * Automatically use a newly installed version of an external application at the next K3b start.
  * Complete new set of K3b action icons for project types and tools. Many thanks to Marcel Dierkes.
  * Show text on the burn button to make it catch the eye.
+ * Support for media:// urls in the Image writing dialogs.
+ * Fixed problems with files bigger than 2 GB on some systems.
 
 0.12.8
 ======
--- branches/stable/extragear/multimedia/k3b/src/misc/k3bcdimagewritingdialog.cpp #487839:487840
@@ -969,7 +969,7 @@
 
 QString K3bCdImageWritingDialog::imagePath() const
 {
-  return KURL::fromPathOrURL( m_editImagePath->url() ).path();
+  return K3b::convertToLocalUrl( KURL::fromPathOrURL( m_editImagePath->url() ) ).path();
 }
 
 
--- branches/stable/extragear/multimedia/k3b/src/misc/k3bisoimagewritingdialog.cpp #487839:487840
@@ -494,7 +494,7 @@
 
 QString K3bIsoImageWritingDialog::imagePath() const
 {
-  return KURL::fromPathOrURL( m_editImagePath->url() ).path();
+  return K3b::convertToLocalUrl( KURL::fromPathOrURL( m_editImagePath->url() ) ).path();
 }