Support for media:// urls in the image writing dialogs.

BUG: 118127

svn path=/branches/stable/extragear/multimedia/k3b/; revision=487840